Visible from start date - [biggest feature] visibility has new option: visible from start date - staff can see "hidden" assignments on student view (#92) - past assignments are grayed out for staff in both student/staff view - students' assignments gray out no longer depends on # available runs, but has to be past the deadline. If a student got extension, he will see gray background color + blue title

--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -66,8 +66,12 @@ table.table-fit {
     width: auto !important;
 }
 
-tr.assignment-no-runs {
+tr.assignment-no-runs, tr.assignment-past-deadline {
     background-color: rgb(247, 247, 247);
+}
+
+tr.assignment-no-runs a {
+    color: slategray;
 }
 
 .file-drop-box {
